Revision history for Perl module Net::WebSocket

0.22
- BREAKING CHANGE: A message-size maximum is now given by default to
  reader/parser interfaces. The maximum defaults to 64 MiB.

0.21 Fri May 24 2019
- Supply missing “MockReader” module for demos.
- Suppress warning when empty “code” and “reason” are both given to
  Net::WebSocket::Frame::close constructor.
- Fix typo in BadHTTPStatus exception.
- Require a current IO::Framed version.
- Allow a “headers” argument to handshake header stringifier.
  This replaces the previously-suggested (hacky) substr().
- Add a test for close frames.
- POD fixes (thank you, MANWAR!)
- Improve wscat.pl demo script.
- Change tests to use Test::FailWarnings rather than Test::NoWarnings

0.20 Wed Apr 24 2019
- Fix test that fails now that X::Tiny no longer uses Module::Load.
- Switch from Module::Load to Module::Runtime.
- Replace README.pod with README.md.

0.19 Fri Aug 24 2018
- Fix LICENSE file (again)

0.18 Fri Aug 24 2018
- Refactor of Endpoint’s defragmenting logic to potentially be useful
  without the HTTP-derived handshake.
- Fix LICENSE file.

0.17 Sat Mar 31 2018
- Remove Text::Control dependency (and large files) from new fragmentation test

0.16 Fri Mar 30 2018
- Fix fragmentation bug: frames of a fragmented message all had the same
  meta-parts.

0.15 Fri Mar 16 2018
- Copyright update (no functional changes)

0.14 Fri Jan 26 2018
- Documentation tweaks/cleanup

0.13 Fri Jan 5 2018
- Test fix - no production changes

0.12 Wed Jan 3 2018
- Added create_message() convenience method in Endpoint.pm
- Reduce use of Module::Load, with an eye to potential removal

0.11 Sun Dec 17 2017
- (Really) fix “large” frame size encoding on 32-bit perls, add test.
- Check for warnings in tests.
- Fix warning in 5.10 on length(undef)

0.1 Fri Dec 15 2017
- MINOR BREAKING: All messages are now Net::WebSocket::Message instances;
  the ::text and ::binary subclasses are removed. They weren’t useful, and